--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 
-{%- include head.html -%}
+{%- include head -%}
 
 <body>
-	{%- include header.html -%}
+	{%- include header -%}
 
-	{%- include config.html -%}
+	{%- include config -%}
 
 	<main id="main">
 		{{ content }}
 	</main>
 
-	{%- include footer.html -%}
+	{%- include footer -%}
 </body>
 
 </html>
