--- a/css/global.css
+++ b/css/global.css
@@ -680,6 +680,32 @@ d-box, d-choices {
 			}
 			&.fullwidth.fullheight { object-fit: contain }
 		}
+
+		&:has(
+			> d-speaker.kris,
+			> d-speaker.susie,
+			> d-speaker.ralsei,
+			> d-speaker.noelle
+		) {
+			position: relative;
+
+			&::before {
+				content: "";
+				position: absolute;
+				top: -0.25em;
+				left: -2.1em;
+				border: 0.2em solid var(--white);
+				--size: 1.75em;
+				width: var(--size);
+				height: var(--size);
+				background: var(--black) center / 80% no-repeat;
+				border-radius: 25%;
+			}
+		}
+		&:has(> d-speaker.kris)::before { background-image: url("../assets/images/faces/kris/battle.png") }
+		&:has(> d-speaker.susie)::before { background-image: url("../assets/images/faces/susie/battle.png") }
+		&:has(> d-speaker.ralsei)::before { background-image: url("../assets/images/faces/ralsei/battle.png") }
+		&:has(> d-speaker.noelle)::before { background-image: url("../assets/images/faces/noelle/battle.png") }
 	}
 
 	&:state(compact) {
@@ -821,7 +847,13 @@ d-sprite {
 d-speaker {
 	color: var(--lightyellow);
 	&::after { content: ":" }
-	d-box:not(:state(compact)) & { display: none }
+	d-box:not(:state(compact)) & {
+		position: fixed;
+		top: 100vh;
+		left: 100vw;
+		font-size: 1rem;
+		opacity: 0;
+	}
 	d-box:state(compact) & {
 		grid-column: 1;
 		grid-row: 1 / span 3;
