--- a/css/global.css
+++ b/css/global.css
@@ -977,9 +977,22 @@ d-text {
 			top: 0.15em;
 			content: "";
 			color: transparent;
-			width: 1em;
-			height: 1em;
+			width: var(--size, 1em);
+			height: var(--size, 1em);
 			background: center / contain no-repeat;
+		}
+	}
+	[theme=battletalk] &:is(
+		[asterisk="Happy" i], [asterisk="Nice" i],
+		[asterisk="Mad" i], [asterisk="Mean" i],
+		[asterisk="Sad" i], [asterisk="Shy" i]
+	) {
+		padding-inline-start: 0;
+		&::before {
+			filter: drop-shadow(0 0 2px var(--black));
+			--size: 2em;
+			top: -1.5em;
+			left: -1.5em;
 		}
 	}
 
@@ -1186,6 +1199,21 @@ d-option-panel {
 	/* First child will always be selection-label */
 	& > :nth-child(2) { margin-block-start: 0 !important }
 	& > :last-child { margin-block-end: 0 !important }
+}
+/* For simultaneous talk bubbles in encounters */
+.boxgroup {
+	display: flex;
+	flex-wrap: wrap;
+
+	&:has(
+		[theme=battletalk] :is(
+			[asterisk="Happy" i], [asterisk="Nice" i],
+			[asterisk="Mad" i], [asterisk="Mean" i],
+			[asterisk="Sad" i], [asterisk="Shy" i]
+		)
+	) {
+		margin-block-start: 0.75em;
+	}
 }
 /* Character icons for ACTs */
 .acticon {
