--- a/css/global.css
+++ b/css/global.css
@@ -251,8 +251,8 @@ img {
 		&::before { display: inline-block }
 	}
 
-	[effect=shake-veryslight][asterisk]:has(&)::before, [effect=shake-veryslight] & { --intensity: 0.3 }
-	[effect=shake-slight][asterisk]:has(&)::before, [effect=shake-slight] & { --intensity: 0.6 }
+	[effect=shake-veryslight][asterisk]:has(&)::before, [effect=shake-veryslight] & { --intensity: 0.35 }
+	[effect=shake-slight][asterisk]:has(&)::before, [effect=shake-slight] & { --intensity: 0.65 }
 	[effect=shake-hard][asterisk]:has(&)::before, [effect=shake-hard] & { --intensity: 1.8 }
 
 	body:not(.noanim) & span, body:not(.noanim) d-text[asterisk]:has(&)::before {
@@ -265,12 +265,12 @@ img {
 	body.noanim & span, body.noanim d-text[asterisk]:has(&)::before {
 		font-style: italic;
 	}
-	.s1, d-text[asterisk]:has(&)::before {
+	.s1, d-box:nth-of-type(3n) d-text[asterisk]:has(&)::before {
 		--shake-state-1: translate(calc(var(--intensity, 1) * 3.2%), calc(var(--intensity, 1) * -3.2%));
 		--shake-state-2: translate(calc(var(--intensity, 1) * 2.2%), calc(var(--intensity, 1) * 0%));
 		--shake-state-3: translate(calc(var(--intensity, 1) * -4%), calc(var(--intensity, 1) * 3.6%));
 	}
-	.s2 {
+	.s2, d-box:nth-of-type(3n+1) d-text[asterisk]:has(&)::before {
 		--shake-state-1: translate(calc(var(--intensity, 1) * -0.6%), calc(var(--intensity, 1) * 3.9%));
 		--shake-state-2: translate(calc(var(--intensity, 1) * -3.2%), calc(var(--intensity, 1) * -1.4%));
 		--shake-state-3: translate(calc(var(--intensity, 1) * 4.8%), calc(var(--intensity, 1) * -1.2%));
@@ -280,7 +280,7 @@ img {
 		--shake-state-2: translate(calc(var(--intensity, 1) * -3.8%), calc(var(--intensity, 1) * 1.8%));
 		--shake-state-3: translate(calc(var(--intensity, 1) * 2.2%), calc(var(--intensity, 1) * 3%));
 	}
-	.s4 {
+	.s4, d-box:nth-of-type(3n+2) d-text[asterisk]:has(&)::before {
 		--shake-state-1: translate(calc(var(--intensity, 1) * 4.8%), calc(var(--intensity, 1) * -0.2%));
 		--shake-state-2: translate(calc(var(--intensity, 1) * -3.5%), calc(var(--intensity, 1) * -0.2%));
 		--shake-state-3: translate(calc(var(--intensity, 1) * -4.2%), calc(var(--intensity, 1) * -4.6%));
