Adjust SOUL placement in in-battle choice menus
Battle menus are wider so the SOUL needs to be further to the right to be properly centered

--- a/css/global.css
+++ b/css/global.css
@@ -1082,8 +1082,10 @@ d-choices {
 				top: 1.7em;
 				--size: 0.75em;
 			}
+			&[theme=battlemenu]::after { left: 11em }
 
 			&[offset]::after { left: calc(9em + var(--offset)) }
+			&[offset][theme=battlemenu]::after { left: calc(11em + var(--offset)) }
 		}
 	}
 
