Remove grid gap for d-boxes with only d-box children

--- a/css/global.css
+++ b/css/global.css
@@ -896,6 +896,8 @@ d-box {
 	}
 
 	&:has(> d-box:first-child) {
+		gap: 0;
+
 		d-speaker::before,
 		d-box > :last-child::after { content: unset }
 	}
