Remove harsh border on fade-themed boxes' speaker icons
For the ones with party member speakers but no sprites, the solid white border was standing out too much against the faded edges, so we're now fading the edges of the party member icon as well

--- a/css/global.css
+++ b/css/global.css
@@ -802,6 +802,17 @@ d-box, d-choices {
 			&:has(> d-speaker.ralsei)::before { background-image: url("../assets/images/faces/ralsei/battle.png") }
 			&:has(> d-speaker.noelle)::before { background-image: url("../assets/images/faces/noelle/battle.png") }
 		}
+		&[theme=fade]:has(
+			> d-speaker.kris,
+			> d-speaker.susie,
+			> d-speaker.ralsei,
+			> d-speaker.noelle
+		)::before {
+			top: -0.05em;
+			left: -1.9em;
+			box-shadow: 0 0 0.2em 0.1em var(--black);
+			border: none;
+		}
 	}
 
 	&:state(compact) {
