Correct battlemenu's text width
Ah shit the box itself has to be wide to fill the screen but the text  doesn't take up the whole space usually. Okay. Well. Whatever it's fixed now

--- a/css/global.css
+++ b/css/global.css
@@ -713,6 +713,8 @@ d-box, d-choices {
 
 		&[theme=powertitle] { width: calc(var(--basewidth) - 11.4em) }
 
+		&[theme=battlemenu] d-text { max-width: calc(var(--basewidth) - 2.4em) }
+
 		&[theme=battledesc] {
 			width: calc(var(--basewidth) - 17em);
 			color: var(--gray);
