--- a/css/global.css
+++ b/css/global.css
@@ -335,47 +335,44 @@ img {
 	display: inline-flex;
 	flex-wrap: wrap;
 	text-indent: 0;
-	
-	d-text[asterisk]:has(&) {
-		text-indent: -1ch;
-		&::before { display: inline-block }
-	}
-
-	[effect=shake-veryslight][asterisk]:has(&)::before, [effect=shake-veryslight] & { --intensity: 0.35 }
-	[effect=shake-slight][asterisk]:has(&)::before, [effect=shake-slight] & { --intensity: 0.65 }
-	[effect=shake-hard][asterisk]:has(&)::before, [effect=shake-hard] & { --intensity: 1.8 }
-
-	body:not(.noanim) & span, body:not(.noanim) d-text[asterisk]:has(&)::before {
-		animation-name: shake;
-		animation-duration: 0.2s;
-		animation-timing-function: steps(2, jump-none);
-		animation-iteration-count: infinite;
-		animation-delay: -0.45s;
-	}
-	body.noanim & span, body.noanim d-text[asterisk]:has(&)::before {
-		font-style: italic;
-	}
-	.s1, d-box:nth-of-type(3n) d-text[asterisk]:has(&)::before {
-		--shake-state-1: translate(calc(var(--intensity, 1) * 3.2%), calc(var(--intensity, 1) * -3.2%));
-		--shake-state-2: translate(calc(var(--intensity, 1) * 2.2%), calc(var(--intensity, 1) * 0%));
-		--shake-state-3: translate(calc(var(--intensity, 1) * -4%), calc(var(--intensity, 1) * 3.6%));
-	}
-	.s2, d-box:nth-of-type(3n+1) d-text[asterisk]:has(&)::before {
-		--shake-state-1: translate(calc(var(--intensity, 1) * -0.6%), calc(var(--intensity, 1) * 3.9%));
-		--shake-state-2: translate(calc(var(--intensity, 1) * -3.2%), calc(var(--intensity, 1) * -1.4%));
-		--shake-state-3: translate(calc(var(--intensity, 1) * 4.8%), calc(var(--intensity, 1) * -1.2%));
-	}
-	.s3 {
-		--shake-state-1: translate(calc(var(--intensity, 1) * 4.4%), calc(var(--intensity, 1) * 3.5%));
-		--shake-state-2: translate(calc(var(--intensity, 1) * -3.8%), calc(var(--intensity, 1) * 1.8%));
-		--shake-state-3: translate(calc(var(--intensity, 1) * 2.2%), calc(var(--intensity, 1) * 3%));
-	}
-	.s4, d-box:nth-of-type(3n+2) d-text[asterisk]:has(&)::before {
-		--shake-state-1: translate(calc(var(--intensity, 1) * 4.8%), calc(var(--intensity, 1) * -0.2%));
-		--shake-state-2: translate(calc(var(--intensity, 1) * -3.5%), calc(var(--intensity, 1) * -0.2%));
-		--shake-state-3: translate(calc(var(--intensity, 1) * -4.2%), calc(var(--intensity, 1) * -4.6%));
-	}
 }
+body:not(.noanim) .shake span, body:not(.noanim) d-text[effect*=shake][asterisk]::before {
+	animation-name: shake;
+	animation-duration: 0.2s;
+	animation-timing-function: steps(2, jump-none);
+	animation-iteration-count: infinite;
+	animation-delay: -0.45s;
+}
+body.noanim .shake span, body.noanim d-text[effect*=shake][asterisk]::before {
+	font-style: italic;
+}
+.shake .s1, d-box:nth-of-type(3n) d-text[effect*=shake][asterisk]::before {
+	--shake-state-1: translate(calc(var(--intensity, 1) * 3.2%), calc(var(--intensity, 1) * -3.2%));
+	--shake-state-2: translate(calc(var(--intensity, 1) * 2.2%), calc(var(--intensity, 1) * 0%));
+	--shake-state-3: translate(calc(var(--intensity, 1) * -4%), calc(var(--intensity, 1) * 3.6%));
+}
+.shake .s2, d-box:nth-of-type(3n+1) d-text[effect*=shake][asterisk]::before {
+	--shake-state-1: translate(calc(var(--intensity, 1) * -0.6%), calc(var(--intensity, 1) * 3.9%));
+	--shake-state-2: translate(calc(var(--intensity, 1) * -3.2%), calc(var(--intensity, 1) * -1.4%));
+	--shake-state-3: translate(calc(var(--intensity, 1) * 4.8%), calc(var(--intensity, 1) * -1.2%));
+}
+.shake .s3 {
+	--shake-state-1: translate(calc(var(--intensity, 1) * 4.4%), calc(var(--intensity, 1) * 3.5%));
+	--shake-state-2: translate(calc(var(--intensity, 1) * -3.8%), calc(var(--intensity, 1) * 1.8%));
+	--shake-state-3: translate(calc(var(--intensity, 1) * 2.2%), calc(var(--intensity, 1) * 3%));
+}
+.shake .s4, d-box:nth-of-type(3n+2) d-text[effect*=shake][asterisk]::before {
+	--shake-state-1: translate(calc(var(--intensity, 1) * 4.8%), calc(var(--intensity, 1) * -0.2%));
+	--shake-state-2: translate(calc(var(--intensity, 1) * -3.5%), calc(var(--intensity, 1) * -0.2%));
+	--shake-state-3: translate(calc(var(--intensity, 1) * -4.2%), calc(var(--intensity, 1) * -4.6%));
+}
+d-text[effect*=shake][asterisk] {
+	text-indent: -1ch;
+	&::before { display: inline-block }
+}
+[effect=shake-veryslight] { --intensity: 0.35 }
+[effect=shake-slight] { --intensity: 0.65 }
+[effect=shake-hard] { --intensity: 1.8 }
 /* #endregion */
 @media (max-width: 30rem) {
 	body { font-size: 0.875em }
